few css changes

--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -17,12 +17,17 @@
 }
 
 .Button.zero {
-  width: 140px;
+  width: 130px;
   grid-column: 1 / span 2;
   border-radius: 57.5px;
   position: relative;
   justify-content: flex-start;
   padding-left: 43px;
+}
+@media (min-width: 768px) {
+  .Button.zero {    
+    width: 140px;
+  }
 }
 
 .Button.function {
