--- a/src/components/calculator/Calculator.css
+++ b/src/components/calculator/Calculator.css
@@ -3,7 +3,7 @@
   background: black;
   border-radius: 50px;
   color: white;
-  /* height: 1218px; */
+  margin: 50px; 
   padding: 20px;
   position: relative;
 }
